package co.edu.uptc.modelo;

public class CodigoPremium {
    
    private String codigo;
    private boolean usado;
    
    public String getCodigo() {
	return codigo;
    }
    
    public void setCodigo(String codigo) {
	this.codigo = codigo;
    }
    
    public boolean getUsado() {
	return usado;
    }
    
    public void setUsado(boolean usado) {
	this.usado = usado;
    }
}
